# langchain-tutorials

./: LangChain Cookbook Part 1 - Fundamentals.ipynb  LangChain Cookbook Part 2 - Use Cases.ipynb  Pipfile  Timer.py  another_memory_bot.py  dspy.py  dspy_sample.py  gemini_bot.py  migrate_pipenv_to_poetry.sh  pyproject.toml
agents/: Agents + ZapierToolkit.ipynb  agents.py  agentsZapierToolkit.py  math_agent.py
bots/: coinbase_pro_transacctions_ETH-USD_0xaca6c427e543240a74f9438cd3e8769b144c4c55_2021-01-01_2024-04-01.parquet  coinbase_pro_transacctions_ETH-USD_0xaca6c427e543240a74f9438cd3e8769b144c4c55_2024-01-01_2024-04-01.parquet  ethereum.py  kraken_transacctions_XETHZUSD_0xaca6c427e543240a74f9438cd3e8769b144c4c55_2021-01-01_2024-04-01.parquet  kraken_transacctions_XETHZUSD_0xaca6c427e543240a74f9438cd3e8769b144c4c55_2024-01-01_2024-04-01.parquet  memory_bot.py  transactions.parquet  transactions_ethereum-1.parquet  transactions_ethereum-2024-04-23-12-30-14.parquet  transactions_ethereum-<built-in method now of type object at 0x101c2e988>.parquet  transactions_ethereum-<built-in method now of type object at 0x105c00988>.parquet  transactions_ethereum.parquet  voice_recognition.py
chains/: Chain Types.ipynb  chaintypes.py
chatapi/: ChatAPI + LangChain Basics.ipynb  chatapi.py
data_generation/: 5 Levels Of Summarization - Novice To Expert.ipynb  Advanced Retrieval With LangChain.ipynb  Ask A Book Questions.ipynb  AskBook_UsingChroma_UsingPinecone.py  Clean and Standardize Data.ipynb  Custom Files Question & Answer.ipynb  Expert Structured Output (Using Kor).ipynb  (+17 more)
(+20 files in other folders)
