[tool.poetry]
name = "langchain-tutorials"
version = "0.1.0"
description = ""
authors = ["Alonso Isidoro Román <alonsoir@gmail.com>"]
license = "ALv2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torchaudio = "^2.2.2"
sounddevice = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
